mb m129.23:03 css draft1

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,15 +7,17 @@
 
     <body>
 
-    <div class="header">
+    <header>
+    <div class="name">
         <h1> Ivan Saucedo </h1>
+    </div>
         
     <div class="nav">
         <p>About</p> 
         <p>Portfolio</p>
         <p>Contact</p>
     </div>
-    </div>
+    </header>
 
         
     <div class="portfolio">
