--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </header>
 
         <main>
-            <section class="about">
+            <section class="APC">
                 <h2 class="headfont fontcolor-main">About Me</h2>
                 <hr>
                 <img class="selfie" src="http://placehold.it/200x200" alt="Placehlder" />
-                <p class="allotherfont aboutp">My name is Ivan Saucedo. I'm 29 years old. Originally from El Paso, Texas, I currently live in Austin. I was first exposed to programming in high school. I picked up basic HTML, Python, and Java, all culminating in a class project. Unfortunately, I left it all on the back burner as I chased other creative outlets, namely writing. A couple years ago, I caught a YouTube video of a 12-year old giving a presentation about an iOS app he had created. This rekindled my interest and I began trying to learn on my own. I enrolled in edX's Intro to Computer Science, as well as several web development courses on Udemy, Udacity, and Codeacademy. Of course, I also followed programming channels on online message boards and most recently I was reading Eloquent Javascript, as suggested by someone in these message boards.
+                <p class="aboutp allotherfont">My name is Ivan Saucedo. I'm 29 years old. Originally from El Paso, Texas, I currently live in Austin. I was first exposed to programming in high school. I picked up basic HTML, Python, and Java, all culminating in a class project. Unfortunately, I left it all on the back burner as I chased other creative outlets, namely writing. A couple years ago, I caught a YouTube video of a 12-year old giving a presentation about an iOS app he had created. This rekindled my interest and I began trying to learn on my own. I enrolled in edX's Intro to Computer Science, as well as several web development courses on Udemy, Udacity, and Codeacademy. Of course, I also followed programming channels on online message boards and most recently I was reading Eloquent Javascript, as suggested by someone in these message boards.
                 </p>
-                <p class="allotherfont aboutp">I was exposed to a lot and I learned a lot, but unfortunately I was missing a sense of structure and teamwork. I wanted to take my programming career to the next step - beyond baby steps. In November of 2017, I stumbled onto the UT Coding Bootcamp and, after researching the program and consulting with a friend who is in the industry, I decided to take the plunge. This particular friend works in web development and I look up to him. I admire what he's doing and I want to do the same for others. I want to set a good example and be a role model for my niece and nephews.
+                <p class="aboutp allotherfont">I was exposed to a lot and I learned a lot, but unfortunately I was missing a sense of structure and teamwork. I wanted to take my programming career to the next step - beyond baby steps. In November of 2017, I stumbled onto the UT Coding Bootcamp and, after researching the program and consulting with a friend who is in the industry, I decided to take the plunge. This particular friend works in web development and I look up to him. I admire what he's doing and I want to do the same for others. I want to set a good example and be a role model for my niece and nephews.
                 </p>
-                <p class="allotherfont aboutp">I'm excited to be here. I'm excited to be learning from talented individuals. And most importantly, I'm excited about meeting and working with like-minded people.
+                <p class="aboutp allotherfont">I'm excited to be here. I'm excited to be learning from talented individuals. And most importantly, I'm excited about meeting and working with like-minded people.
                 </p>
             </section>
 
@@ -37,9 +37,9 @@
                 <h3 class="headfont fontcolor-main">Connect with Me</h3>
                 <hr>
                 <section class="social">
-                    <img src="assets/images/github.png" alt="github link" />
-                    <img src="assets/images/linkedin.png" alt="linkedin link" />
-                    <img src="assets/images/stackoverflow.png" alt="stackoverflow link" />
+                    <img src="assets/images/github.png" height="64px" width="64px" alt="github icon and link" />
+                    <img src="assets/images/linkedin.png" height="64px" width="64px" alt="linkedin icon and link" />
+                    <img src="assets/images/stackoverflow.png" height="56px" width="56px" alt="stackoverflow icon and link" />
                 </section>
             </aside>
         </main> 
