--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,11 @@
             
             <!-- header right: navigation box, "About", "Portfolio", "Contact" links -->
             <nav class="allotherfont">
-                <p class="navA">About</p> 
-                <p class="navP">Portfolio</p>
-                <p class="navC">Contact</p>
+                <a href="index.html"><p class="navA">About</p></a>
+                <p class="navdivider">|</p>
+                <a href="portfolio.html"><p class="navP">Portfolio</p></a>
+                <p class="navdivider">|</p>
+                <a href="contact.html"><p class="navC">Contact</p></a>
             </nav>
         </header>
 
@@ -28,6 +30,22 @@
                 <h2 class="headfont fontcolor-main">Portfolio</h2>
                 <hr class="main">
 
+                <!-- images  images  images  images  images  images  images -->
+                <img class="x1 y3" src="assets/images/hangman.jpg" height="200" width="275" alt="hangman">
+                <p class="x1 y3">Hangman</p>
+
+                <img class="x2 y3" src="assets/images/rpg_game.jpg" height="200" width="275" alt="rpg game">
+                <p class="x2 y3">RPG Game</p>
+
+                <img class="x1 y2" src="assets/images/trivia.jpg" height="200" width="275" alt="trivia">
+                <p class="x1 y2">Trivia</p>
+
+                <img class="x2 y2" src="assets/images/info.jpg" height="200" width="275" alt="rutgers info widget">
+                <p class="x2 y2">Rutgers Info Widget</p>
+
+                <img class="x1 y1" src="assets/images/rps.jpg" height="200" width="275" alt="rock paper scissors">
+                <p class="x1 y1">Rock Paper Scissors</p>
+
             </section>
 
             <!-- main section, right: "Connect with Me" -->
@@ -35,9 +53,9 @@
                 <h3 class="headfont fontcolor-main">Connect with Me</h3>
                 <hr class="aside">
                 <section class="social">
-                    <img class="git" src="assets/images/github.png" height="64px" width="64px" alt="github icon and link" />
-                    <img class="linked" src="assets/images/linkedin.png" height="64px" width="64px" alt="linkedin icon and link" />
-                    <img class="stack" src="assets/images/stackoverflow.png" height="58px" width="58px" alt="stackoverflow icon and link" />
+                        <a href="https://github.com/ivanscdo" target="_blank"><img class="git" src="assets/images/github.png" height="70px" width="70px" alt="github icon and link"></a>
+                        <a href="https://www.linkedin.com/in/ivan-saucedo-94272174/" target="_blank"><img class="linked" src="assets/images/linkedin.png" height="70px" width="70px" alt="linkedin icon and link"></a>
+                        <a href="https://stackexchange.com/users/12789137/ivanscdo" target="_blank"><img class="stack" src="assets/images/stackoverflow.png" height="64px" width="64px" alt="stackoverflow icon and link"></a>
                 </section>
             </aside>
         </main> 
